--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "github-build": "ng build --configuration production --base-href https://ludtwigschmudy.github.io/ludtwigschmudy.github.io/",
+    "github-build": "ng build --configuration production --base-href https://ludtwigschmudy.github.io/",
     "github-deploy": "npx angular-cli-ghpages --dir=dist/ls-website/browser"
   },
   "prettier": {
